@@ -15,17 +15,51 @@
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
 
-#include <stdio.h>
+#include <dlfcn.h>
+#include <pthread.h>
 
-int k = 0;
+#define NUM 2
 
 extern void pendfunc (int x);
 
+void*
+thread_func (void* arg)
+{
+  const char *libname = "mi-pendshr2.sl";
+  void *h;
+  int (*p_func) ();
+
+  h = dlopen (libname, RTLD_LAZY);  /* set breakpoint here */
+  if (h == NULL)
+    return;
+
+  p_func = dlsym (h, "pendfunc3");
+  if (p_func == NULL)
+    return;
+
+  (*p_func) ();
+}
+
 int main()
 {
-  pendfunc (3); /* break main here */
-  pendfunc (4);
-  k = 1;
+  int res;
+  pthread_t threads[NUM];
+  int i;
+
   pendfunc (3);
+  pendfunc (4);
+
+  for (i = 0; i < NUM; i++)
+    {
+      res = pthread_create (&threads[i],
+			     NULL,
+			     &thread_func,
+			     NULL);
+    }
+
+  for (i = 0; i < NUM; i++) {
+    res = pthread_join (threads[i], NULL);
+  }
+
   return 0;
 }
