@@ -24,29 +24,39 @@ if {[skip_shlib_tests]} {
     return 0
 }
 
-standard_testfile mi-pending.c mi-pendshr.c
-set lib_sl [standard_output_file mi-pendshr.sl]
+standard_testfile mi-pending.c
 
-set lib_opts  debug
-set exec_opts [list debug shlib=$lib_sl]
+set libfile1 "mi-pendshr"
+set libfile2 "mi-pendshr2"
+set libsrc1  $srcdir/$subdir/$libfile1.c
+set libsrc2  $srcdir/$subdir/$libfile2.c
+set lib_sl1  [standard_output_file $libfile1.sl]
+set lib_sl2  [standard_output_file $libfile2.sl]
+set lib_opts debug
+set exec_opts [list debug shlib=$lib_sl1 shlib_load]
 
 if [get_compiler_info] {
     return -1
 }
 
-if { [gdb_compile_shlib $srcdir/$subdir/$srcfile2 $lib_sl $lib_opts] != ""
-     || [gdb_compile $srcdir/$subdir/$srcfile $binfile executable $exec_opts] != ""} {
-    untested "Could not compile either $libsrc or $srcdir/$subdir/$srcfile."
+if { [gdb_compile_shlib $libsrc1 $lib_sl1 $lib_opts] != ""
+     || [gdb_compile_shlib $libsrc2 $lib_sl2 $lib_opts] != ""} {
+    untested "Could not compile either $libsrc1 or $libsrc2"
+    return -1
+}
+
+if { [gdb_compile_pthreads $srcdir/$subdir/$srcfile $binfile executable $exec_opts] != ""} {
+    untested "Could not compile  $srcdir/$subdir/$srcfile."
     return -1
 }
 
 # Start with a fresh gdb.
-
 gdb_exit
 mi_gdb_start
 mi_gdb_reinitialize_dir $srcdir/$subdir
 mi_gdb_load ${binfile}
-mi_load_shlibs $lib_sl
+mi_load_shlibs $lib_sl1
+mi_load_shlibs $lib_sl2
 
 # Set pending breakpoint via MI.
 mi_gdb_test "-break-insert -f pendfunc1" \
@@ -54,23 +64,61 @@ mi_gdb_test "-break-insert -f pendfunc1" \
     "MI pending breakpoint on pendfunc1"
 
 # Set pending breakpoint with a condition via MI.
-mi_gdb_test "-break-insert -f -c x==4 ${srcfile2}:pendfunc2" \
-    ".*\\^done,bkpt=\{number=\"2\",type=\"breakpoint\",disp=\"keep\",enabled=\"y\",addr=\"<PENDING>\",pending=\"${srcfile2}:pendfunc2\",cond=\"x==4\",times=\"0\",original-location=\"${srcfile2}:pendfunc2\"\}"\
-    "MI pending breakpoint on ${srcfile2}:pendfunc2 if x==4"
+mi_gdb_test "-break-insert -f -c x==4 ${libsrc1}:pendfunc2" \
+    ".*\\^done,bkpt=\{number=\"2\",type=\"breakpoint\",disp=\"keep\",enabled=\"y\",addr=\"<PENDING>\",pending=\"${libsrc1}:pendfunc2\",cond=\"x==4\",times=\"0\",original-location=\"${libsrc1}:pendfunc2\"\}"\
+    "MI pending breakpoint on ${libsrc1}:pendfunc2 if x==4"
+
+# Set breakpoint so that we can stop when the thread is created
+mi_gdb_test "-break-insert -f thread_func" \
+    ".*\\^done,bkpt=\{number=\"3\",type=\"breakpoint\",disp=\"keep\",enabled=\"y\",addr=\"${hex}\",func=\"thread_func\".*\}"\
+    "MI pending breakpoint on thread_func"
 
 mi_run_cmd
+
 mi_expect_stop "breakpoint-hit" "pendfunc1" ".*" ".*" ".*" \
     { "" "disp=\"keep\"" } \
     "Run till MI pending breakpoint on pendfunc1"
 
 mi_send_resuming_command "exec-continue" "continuing execution to skip conditional bp"
+
 # We should not stop on the conditional breakpoint yet, but we stop on the original bp. 
 mi_expect_stop "breakpoint-hit" "pendfunc1" ".*" ".*" ".*" \
     { "" "disp=\"keep\"" } \
     "Run till MI pending breakpoint on pendfunc1 a second time"
 
 mi_send_resuming_command "exec-continue" "continuing execution to conditional bp"
+
 # Now we should stop on the conditional breakpoint.
 mi_expect_stop "breakpoint-hit" "pendfunc2" "\{name=\"x\",value=\"4\"\}" ".*" ".*" \
     { "" "disp=\"keep\"" } \
     "Run till MI pending breakpoint on pendfunc2 with x==4"
+
+mi_send_resuming_command "exec-continue" "continuing execution to thread creation"
+
+# Stop on thread creation so we can set a pending breakpoint with a thread cond.
+mi_expect_stop "breakpoint-hit" "thread_func" ".*" ".*" ".*" \
+    { "" "disp=\"keep\"" } \
+    "Run till MI pending breakpoint on thread_func"
+
+# Delete thread creation breakpoint to enable more than 1 thread to be created.
+mi_gdb_test "-break-delete 3" "\\^done" "Delete breakpoint 3"
+
+# Set pending breakpoint with a thread via MI.
+mi_gdb_test "-break-insert -p 2 -f pendfunc3" \
+    ".*\\^done,bkpt=\{number=\"4\",type=\"breakpoint\",disp=\"keep\",enabled=\"y\",addr=\"<PENDING>\",pending=\"pendfunc3\",thread=\"2\",thread=\"2\",times=\"0\",original-location=\"pendfunc3\"\}"\
+    "MI pending breakpoint on pendfunc3"
+
+mi_send_resuming_command "exec-continue" "continuing execution to thread condition"
+
+# Check if we stopped in thread 2 like we should.
+set testname "Run till MI pending breakpoint on pendfunc3 on thread 2"
+gdb_expect 5 {
+    -re "\\*stopped,reason=\"breakpoint-hit\",disp=\"keep\",bkptno=\"4\",frame=\{addr=\"$hex\",func=\"pendfunc3\".*thread-id=\"2\".*" {
+	pass $testname
+	return 0
+    }
+    timeout {
+	fail "$testname (timeout)"
+	return -1
+    }
+}
